# HardPowerIntelligence

./: .dockerignore  .env.example  .gitignore  API_SPEC.md  CHANGELOG.md  COMPONENT_REGISTRY.md  CONTRACT.md  DATABASE_SCHEMA.md  DECISIONS.md  DEMO_GUIDE.md  DEPLOYMENT_CONFIG.md  DEPLOY_RUNBOOK.md  DESIGN_SYSTEM.md  EVAL_BASELINE.md  FRONTEND_SPEC.md  LICENSE  MERIDIAN.md  README.md  SECURITY_AUDIT.md  SPEC.md  fly.api.toml  fly.worker.toml  general_data_source_notes.md  pyproject.toml  run-tests.sh  updated_data_source_arguments.md
.claude/hooks/: run-tests.sh
.clinerules/: meridian.md
.cursor/rules/: meridian.mdc
.github/workflows/: daily-brief.yml
.meridian/: FEATURES.json  gates.yaml
.windsurf/rules/: meridian.md
api/: pyproject.toml
api/app/: deps.py  errors.py  main.py  settings.py
api/app/routers/: auth.py  briefs.py  calendar.py  entities.py  graph.py  health.py  webhooks.py
docker/: Dockerfile.api  Dockerfile.worker
docs/: ARCHITECTURE.md  AUTH_EMAIL_TEMPLATES.md  CONVERGENCE_GRAPH_PLAN.md  DATA_ARCHITECTURE_ANALYSIS.md  DATA_SOURCES.md  GDELT_BIGQUERY_PLAN.md  MERIDIAN_DOGFOOD.md  MOCKUPS.md  PAYMENTS_GOLIVE_PLAN.md  PERSONAS.md  PHASE_PLAN.md  PHILOSOPHY.md  SCOPE.md  SOURCES.md  SOURCE_LANDSCAPE.md  TESTER_ONBOARDING.md  TESTER_RECRUITING_WORKSHEET.md
engine/: pyproject.toml
engine/engine/: db.py  settings.py
engine/engine/adapters/: arxiv.py  base.py  edgar.py  edgar_body.py  feeds.py  gdelt.py  nrc.py  registry.py  sam_gov.py  usaspending.py
engine/engine/brief/: analysis.py  epistemics.py  generator.py  materiality.py  prompt.py  publish.py  rag.py  significance.py
engine/engine/entity/: eval.py  funding_builder.py  gazetteer.py  graph_builder.py  linker.py  reference.py  resolution.py  resolver.py
engine/engine/eval/: citation_eval.py
engine/engine/ingest/: fetcher.py  retention.py  runner.py
engine/engine/llm/: client.py
engine/engine/ops/: __init__.py  health.py
engine/engine/signal/: gdelt.py
scripts/: backfill_item_entities.py  brief_quality_report.py  build_convergence_edges.py  dump_sources.py  eval_resolver.py  eval_significance.py  grant_comp.py  inspect_brief_entities.py  renormalize_aliases.py  run_brief.py  run_health.py  run_ingest.py  seed_entities.py  seed_fixtures.py
supabase/: config.toml
supabase/migrations/: 20260605000001_initial_schema.sql  20260607000001_fix_handle_new_user.sql  20260611000001_lock_briefs_rls.sql  20260612000001_embedding_hnsw_index.sql  20260615000001_add_arxiv_source.sql  20260616000001_layered_brief_fields.sql  20260616000002_subscriptions_lemonsqueezy.sql  20260617000001_subscription_portal_url.sql  20260617000002_brief_signal.sql  20260618000001_brief_signal_series.sql  20260619000001_brief_items_entity_ids_gin.sql  20260620000001_add_nrc_source.sql  20260628000001_brief_item_attribution.sql  20260628000002_gdelt_story_source.sql  20260628000003_feeds_source.sql  20260630000001_brief_wire.sql  20260706000001_citation_published_at.sql  20260707000001_enable_rls_operational_tables.sql  20260716000001_brief_item_type_widen.sql  20260716000002_entity_edges_converges_with.sql
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_briefs.py  test_entities.py  test_graph.py  test_health.py  test_webhooks.py  test_wire.py
tests/fixtures/: entity_golden.json  significance_golden.json
tests/fixtures/usaspending/: 20260605_awards_response.json
tests/unit/: test_analysis.py  test_brief_alignment.py  test_citation_eval.py  test_db.py  test_entity_eval.py  test_entity_linker.py  test_entity_reference.py  test_entity_resolution.py  test_epistemics.py  test_funding_builder.py  test_gazetteer.py  test_gdelt_signal.py  test_generator.py  test_graph_builder.py  test_health.py  test_llm_client.py  test_llm_client_robustness.py  test_llm_usage.py  test_materiality.py  test_novelty.py  test_prompt.py  test_publish.py  test_published_at.py  test_run_ingest.py  test_significance.py  test_sources_doc.py  test_title_dedupe.py  test_wire.py  test_worker.py
tests/unit/adapters/: test_arxiv_adapter.py  test_edgar_adapter.py  test_edgar_body.py  test_feeds_adapter.py  test_gdelt_adapter.py  test_nrc_adapter.py  test_sam_gov_adapter.py  test_usaspending_adapter.py
tests/unit/entity/: test_resolver.py
tests/unit/ingest/: test_fetcher.py  test_merge_by_native_id.py  test_retention.py  test_runner.py
web/: next.config.ts  package-lock.json  package.json  proxy.test.ts  proxy.ts  vitest.config.mts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: providers.tsx
web/lib/: amounts.test.ts  amounts.ts  analytics.test.ts  analytics.ts  attribution.ts  auth.ts  entities.test.ts  entities.ts  graph-layout.test.ts  graph-layout.ts  item-types.ts  payments.ts  signal.ts  sources.test.ts  sources.ts  types.ts  utils.ts
worker/: pyproject.toml
worker/tasks/: app.py
(+62 files in other folders)
