[project]
name = "hpi-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hpi-engine",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",            # local Supabase JWT verification (HS256)
    "httpx>=0.27",          # Lemon Squeezy API calls (checkout + portal URLs)
    "structlog>=24.1",
    "slowapi>=0.1.9",       # rate limiting (wired later)
    "sentry-sdk[fastapi]>=2.5",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
