[project]
name = "hpi-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.30",          # embeddings (text-embedding-3-small)
    "litellm>=1.40",         # LLM waterfall via OpenRouter + Anthropic
    "python-dotenv>=1.0",
    "tenacity>=8.3",         # retry logic for HTTP and LLM calls
    "structlog>=24.1",       # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",           # async HTTP mocking for adapter tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]
