[project]
name = "hpi-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # The worker reuses the engine's adapters/runner/fetcher/db wholesale (D116); it needs no
    # task-queue framework — a plain asyncio interval loop owns the schedule (tasks/app.py).
    # procrastinate/asyncpg/pydantic-settings were dropped: engine already provides asyncpg +
    # settings, and there is no distributed queue to run.
    "hpi-engine",
    "sentry-sdk>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tasks"]
